# huffman

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Testing  cmake_install.cmake  compressed.txt  decompressed.txt  huffman.cbp  input.txt
lib/: decoder.cpp  decoder.h  encoder.cpp  encoder.h
test/: test.cpp
utility/: console.cpp  console.h  util.cpp  util.h
